# reflex-gadt-api

./: .travis.yml  ChangeLog.md  Readme.md  reflex-gadt-api.cabal  release.nix  shell.nix
.github/workflows/: haskell.yml
example/: README.md  default.nix
example/.obelisk/impl/: github.json
example/backend/: backend.cabal
example/backend/src/: Backend.hs  Backend.lhs  Backend.md
example/common/: common.cabal
example/common/src/: Readme.lhs
example/common/src/Common/: Route.hs
example/frontend/: frontend.cabal
example/frontend/src/: Frontend.hs
src/Reflex/Dom/: GadtApi.hs
src/Reflex/Dom/GadtApi/: WebSocket.hs  XHR.hs
