name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple
extra-source-files:
  src/Backend.md

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , aeson
               , common
               , constraints-extras
               , dependent-sum
               , frontend
               , obelisk-backend
               , obelisk-route
               , snap-core
               , text
               , time
               , websockets
               , websockets-snap
  exposed-modules:
    Backend
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -optL -q

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -threaded
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
