name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , aeson
               , aeson-gadt-th
               , constraints-extras
               , obelisk-route
               , mtl
               , reflex-dom-core
               , reflex-gadt-api
               , text
               , time
  exposed-modules:
    Common.Api
    Common.Route
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -optL -q
